update Java and Spring version