@@ -1,6 +1,5 @@
 package com.management.task.service;
 
-
 import com.management.task.converter.TaskConverter;
 import com.management.task.dto.Task;
 import com.management.task.exceptions.NotFoundException;
@@ -12,7 +11,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Getter
@@ -21,14 +19,17 @@ public class TaskService {
 
     private final TaskRepository taskRepository;
 
+    private static final String TASK_NOT_FOUND = "Task not found";
+
     public TaskService(TaskRepository taskRepository) {
         this.taskRepository = taskRepository;
     }
 
     public List<Task> getAll() {
-        return taskRepository.findAll().stream().map(TaskConverter::convertTaskModelToTaskDto).collect(
-            Collectors.toList());
-    }
+        return taskRepository.findAll().stream().map(TaskConverter::convertTaskModelToTaskDto)
+            .toList();
+
+        }
 
     public void createTask(Task taskDto) {
         TaskModel taskModel = TaskConverter.convertTaskDtoToTaskModel(taskDto);
@@ -38,14 +39,14 @@ public class TaskService {
     public Task getTaskById(String id) {
         Optional<TaskModel> taskModelOptional = taskRepository.findById(id);
         if(taskModelOptional.isEmpty()) {
-            throw new NotFoundException("Task not found");
+            throw new NotFoundException(TASK_NOT_FOUND);
         }
         return TaskConverter.convertTaskModelToTaskDto(taskModelOptional.get());
     }
     public void updateTask(Task taskDto, String id) {
         Optional<TaskModel> taskDtoOptional = taskRepository.findById(id);
         if(taskDtoOptional.isEmpty()) {
-            throw new NotFoundException("Task not found");
+            throw new NotFoundException(TASK_NOT_FOUND);
         }
         taskDtoOptional.get().setDescription(taskDto.getDescription());
         taskRepository.save(taskDtoOptional.get());
@@ -53,19 +54,19 @@ public class TaskService {
     }
 
     public List<Task> getAllCompleteTasks() {
-        return taskRepository.findByComplete(true).stream().map(TaskConverter::convertTaskModelToTaskDto).collect(
-            Collectors.toList());
+        return taskRepository.findByComplete(true).stream().map(TaskConverter::convertTaskModelToTaskDto)
+            .toList();
     }
 
     public List<Task> getAllInCompleteTasks() {
-        return taskRepository.findByComplete(false).stream().map(TaskConverter::convertTaskModelToTaskDto).collect(
-            Collectors.toList());
+        return taskRepository.findByComplete(false).stream().map(TaskConverter::convertTaskModelToTaskDto)
+                .toList();
     }
 
     public void completeTask(String id) {
         Optional<TaskModel> taskDtoOptional = taskRepository.findById(id);
         if(taskDtoOptional.isEmpty()) {
-            throw new NotFoundException("Task not found");
+            throw new NotFoundException(TASK_NOT_FOUND);
         }
         taskDtoOptional.get().setComplete(true);
         taskRepository.save(taskDtoOptional.get());
@@ -74,7 +75,7 @@ public class TaskService {
     public void inCompleteTask(String id) {
         Optional<TaskModel> taskDtoOptional = taskRepository.findById(id);
         if(taskDtoOptional.isEmpty()) {
-            throw new NotFoundException("Task not found");
+            throw new NotFoundException(TASK_NOT_FOUND);
         }
         taskDtoOptional.get().setComplete(false);
         taskRepository.save(taskDtoOptional.get());
@@ -83,7 +84,7 @@ public class TaskService {
     public void deleteTask(String id) {
         Optional<TaskModel> taskDtoOptional = taskRepository.findById(id);
         if(taskDtoOptional.isEmpty()) {
-            throw new NotFoundException("Task not found");
+            throw new NotFoundException(TASK_NOT_FOUND);
         }
         taskRepository.deleteById(id);
     }
